Fix display of emails from ShowEmailRecord (closes: #9848).
- reduce left margin of body (used for non existent "nav" pane)
- use overflow: auto, so long lines will not overflow, a scrollbar will appear
  instead.

git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/3.8/trunk@20025 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/misc.css
+++ b/share/html/NoAuth/css/web2/misc.css
@@ -99,3 +99,10 @@ div.autocomplete ul li {
  color: #999;
 
 }
+
+#comp-Ticket-ShowEmailRecord #body {
+    margin-left: 1em;
+    margin-top: 1em;
+    overflow: auto;
+} 
+
